[package]
name = "stocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
ureq = { version = "2.5.0", features = ["json"] }
url = "2.2.2"
thiserror = "1.0.32"
dotenv = "0.15.0"
chrono = "0.4.22"
chrono-tz = "0.6.3"
